# Ares

./: .gitignore  README.md  insides.py  pyproject.toml
appliences/: integration.py  ml_modelo.py
atcrd/: integration.py  sample_submission.csv  supplementary_LEAD.parquet  test.csv  train.csv
