[tool.poetry]
name = "ares development"
version = "0.1.0"
description = "Tool developed  to improve process with data science and analytics"
authors = ["Rodolfo Lima <rodolfo.eli.jrles@gmail.com>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
streamlit = "1.25.0"
pandas = "1.3.5"
scipy = "1.8.0"
scikit-learn = "1.3.0"
plotly = "5.15.0"
psycopg2-binary = "2.9.6"
numpy = "1.21.3"
sqlalchemy = "2.0.19"
flask = "2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
